feat: migrate to Java 25 with virtual threads and Spring Boot 4.0
Toolchain (Java 17 → 25):
- Root pom.xml + archflow-langchain4j/pom.xml: java.version=25
- Dockerfile: eclipse-temurin:17 → eclipse-temurin:25 (build + runtime)
- CI/CD: java-version '17' → '25' in ci.yml + release.yml
- Lombok 1.18.30 → 1.18.40 (Java 25 support)
- JaCoCo 0.8.11 → 0.8.13 (bytecode major version 69 support)
- Spring Boot 3.3.0 → 4.0.0 (first-class Java 25 LTS support)

Virtual threads (8 production sites):
- ArchFlowAgent.createExecutorService(): ThreadPoolExecutor → newVirtualThreadPerTaskExecutor()
- DefaultFlowEngine: 3x CompletableFuture.supplyAsync() now use virtual executor field
- MetricsCollector, EventStreamRegistry, CachingInterceptor: ScheduledExecutorService
  now uses Thread.ofVirtual().factory() for background tasks
- MetricsExporter: async export executor → newVirtualThreadPerTaskExecutor()
- StdioClientTransport: new Thread() → Thread.ofVirtual().start() for subprocess I/O
- StdioServerTransport: executor + reader thread → virtual threads

ReentrantLock anti-pinning (8 LLM adapters):
- OpenAiChatAdapter, OpenAiStreamingChatAdapter
- AnthropicChatAdapter, AnthropicStreamingChatAdapter
- RagChainAdapter, LocalEmbeddingAdapter, OpenAiEmbeddingAdapter
- OpenRouterChatAdapter
All migrated from synchronized execute() to ReentrantLock with
execute()/doExecute() pattern preserving exception propagation semantics.

Spring Boot 4.0 compatibility:
- ArchflowHealthIndicator decoupled from spring-boot-actuator (API moved
  in Boot 4.0). Now framework-agnostic with Status enum + HealthResult record.
- ArchflowHealthIndicatorTest updated to use new API.

Verification: 1902 tests green, zero regressions, BUILD SUCCESS on Java 25.0.2 GraalVM CE.

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>